<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="shared_todo_add"
        tools:context=".basic_03_android_test.todoList.TodoTitleEditFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="please input todo title"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:counterEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="please input todo description"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:counterEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Priority:"
            android:layout_marginTop="20dp"
            android:id="@+id/priority_label"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Spinner
            android:id="@+id/todo_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/priority_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/todo_priority">

            <include layout="@layout/nav_buttons"
                android:id="@+id/nav_buttons"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>